# BirdsEye

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
inc/: main.h
inc/core/: Timer.h
src/: CMakeLists.txt  main.cpp  main.h
src/core/: CMakeLists.txt  Timer.cpp  Timer.h
src/ecs/: CMakeLists.txt  Component.h  Entity.cpp  Entity.h  IComponent.h  ISystem.h  SystemManager.cpp  SystemManager.h
src/ecs/BaseComponents/: CMakeLists.txt  TransformComponent.cpp  TransformComponent.h
src/ecs/BaseSystems/: CMakeLists.txt  MoveSystem.cpp  MoveSystem.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/utils/: Point.h
tests/: CMakeLists.txt
tests/ecs_tests/: CMakeLists.txt  tests.cpp
